charts/mycarrier-helm/examples/offload/deployment.yaml
---
# Source: mycarrier-helm/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopstest-routetester-feature28
  namespace: feature28
  labels:
    
    app.kubernetes.io/name: devopstest-routetester-feature28
    app.kubernetes.io/instance: devopstest-routetester-feature28
    app.kubernetes.io/part-of: devopstest
    app.kubernetes.io/component: "routetester"
    app: devopstest-routetester-feature28
    mycarrier.tech/environment: feature28
    mycarrier.tech/envscaling: "0"
    mycarrier.tech/envType: "standard"
    mycarrier.tech/service-namespace: feature28
    mycarrier.tech/reference: ""
    mycarrier.tech/commitDeployed: "c6ba942"
    mycarrier.tech/correlationId: ""
    version: 26.14.f90d8fe
    mycarrier/service-version: 26.14.f90d8fe
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,Prune=true
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: devopstest-routetester-feature28
      app.kubernetes.io/instance: devopstest-routetester-feature28
  template:
    metadata:
      labels:
        
        app.kubernetes.io/name: devopstest-routetester-feature28
        app.kubernetes.io/instance: devopstest-routetester-feature28
        app.kubernetes.io/part-of: devopstest
        app.kubernetes.io/component: "routetester"
        app: devopstest-routetester-feature28
        mycarrier.tech/environment: feature28
        mycarrier.tech/envscaling: "0"
        mycarrier.tech/envType: "standard"
        mycarrier.tech/service-namespace: feature28
        mycarrier.tech/reference: ""
        mycarrier.tech/commitDeployed: "c6ba942"
        mycarrier.tech/correlationId: ""
        version: 26.14.f90d8fe
        mycarrier/service-version: 26.14.f90d8fe
        language: "python"
        
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.mycarrier.tech"
        vault.security.banzaicloud.io/mutate-probes: "true"
        vault.security.banzaicloud.io/vault-auth-method: azure
        vault.security.banzaicloud.io/vault-path: clusterauth
        vault.security.banzaicloud.io/vault-role: appcluster
        vault.security.banzaicloud.io/vault-env-daemon: "true"
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
        sidecar.istio.io/inject: 'true'
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/container-names: "devopstest-routetester-feature28"
        instrumentation.opentelemetry.io/inject-python: devopstest-routetester-feature28
        
    spec:
      
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        runAsNonRoot: true
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      terminationGracePeriodSeconds: 10
      containers:
        - name: routetester
          image: "mycarrieracr.azurecr.io/appstack/routetester:26.14.f90d8fe"
          
          
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: tmp-dir
              mountPath: /tmp
            
            - name: otel-log
              mountPath: /var/log/opentelemetry
        
      volumes:
        - name: tmp-dir
          emptyDir: {}
        - name: otel-log
          emptyDir: {}
      imagePullSecrets:
        - name: imagepull
